Revert to original single threaded local replays page loading